<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SettingsActivity"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/title_settings_activity"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/linear_layout_margins"
        android:layout_marginTop="@dimen/linear_layout_margins"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/settings_text_size"
            android:textColor="@color/title_text_color"
            android:text="@string/settings_measure_units_name" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure_name_margin_top"
                android:layout_marginEnd="@dimen/measure_name_margin_end"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/measure_text_color"
                android:textSize="@dimen/settings_text_size"
                android:text="@string/settings_wind_speed_name" />

            <TextView
                android:id="@+id/text_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure_name_margin_top"
                android:layout_marginEnd="@dimen/measure_name_margin_end"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_wind"
                android:textColor="@color/measure_text_color"
                android:textSize="@dimen/settings_text_size"
                android:text="@string/settings_temperature_name" />

            <TextView
                android:id="@+id/text_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measure_name_margin_top"
                android:layout_marginEnd="@dimen/measure_name_margin_end"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_temperature"
                android:textColor="@color/measure_text_color"
                android:textSize="@dimen/settings_text_size"
                android:text="@string/settings_pressure_name" />

            <RadioGroup
                android:id="@+id/wind_speed_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wind_speed_radio_group_margin_top"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_meters"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/radio_button_margin_end"
                    android:checked="true"
                    android:onClick="onRadioButtonWindSpeedGroupClicked"
                    android:text="@string/settings_radio_meters_name" />

                <RadioButton
                    android:id="@+id/radio_kilometers"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/radio_button_margin_end"
                    android:onClick="onRadioButtonWindSpeedGroupClicked"
                    android:text="@string/settings_radio_kilometers_name" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/temperature_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/temperature_radio_group_margin_top"
                android:layout_below="@+id/wind_speed_group"
                android:layout_toEndOf="@id/text_temperature"
                android:layout_alignStart="@+id/wind_speed_group"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_celsius"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/radio_button_margin_end"
                    android:checked="true"
                    android:onClick="onRadioButtonTemperatureGroupClicked"
                    android:text="@string/settings_radio_celsius_name" />

                <RadioButton
                    android:id="@+id/radio_fahrenheit"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/radio_button_margin_end"
                    android:onClick="onRadioButtonTemperatureGroupClicked"
                    android:text="@string/settings_radio_fahrenheit_name" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/pressure_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/pressure_radio_group_margin_top"
                android:layout_below="@+id/temperature_group"
                android:layout_toEndOf="@id/text_pressure"
                android:layout_alignStart="@+id/wind_speed_group"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_mm"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/radio_button_margin_end"
                    android:checked="true"
                    android:onClick="onRadioButtonPressureGroupClicked"
                    android:text="@string/settings_radio_mm_name" />

                <RadioButton
                    android:id="@+id/radio_hpa"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/radio_button_margin_end"
                    android:onClick="onRadioButtonPressureGroupClicked"
                    android:text="@string/settings_radio_hpa_name" />

            </RadioGroup>

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/floating_action_button_margins"
        android:layout_gravity="bottom|end"
        android:onClick="onFloatingActionButtonDoneClicked"
        android:src="@drawable/ic_action_done"/>

</android.support.design.widget.CoordinatorLayout>