<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.CitySelectionActivity"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_city_selection"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/title_city_selection"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/city_selection_linear_margins"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text_search_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city_name"
            android:completionThreshold = "1"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_margin="@dimen/city_selection_progress_bar_margins"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/city_selection_recycler_view"
            android:layout_marginTop="@dimen/city_selection_recycler_view_margins"
            android:layout_marginBottom="@dimen/city_selection_recycler_view_margins"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <FrameLayout
            android:id="@+id/frame_layout_empty_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/frame_layout_empty_list_text"/>

        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>