<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/nav_drawer_activity_main_toolbar_margin_top"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/nav_drawer_activity_main_toolbar_text_margin_start"
                    android:text="@string/nav_drawer_activity_main_toolbar_text"
                    android:textColor="@color/nav_drawer_activity_main_toolbar_text_color"
                    android:textSize="@dimen/nav_drawer_activity_main_toolbar_text_size" />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/nav_drawer_activity_main_toolbar_image_button_margin_end"
                    android:background="@drawable/ic_action_search" />
            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/navigation_menu_recycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_drawer_activity_main_recycler_view_height"
                android:layout_gravity="start" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_drawer_activity_main_line_view_height"
                android:background="@color/nav_drawer_activity_main_line_view_color" />

            <TextView
                android:id="@+id/text_settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_drawer_activity_main_text_button_margin_top"
                android:layout_marginStart="@dimen/nav_drawer_activity_main_text_button_margin_start"
                android:drawableStart="@drawable/ic_action_settings_black"
                android:drawablePadding="@dimen/nav_drawer_activity_main_text_button_padding"
                android:text="@string/nav_drawer_activity_main_settings"
                android:textSize="@dimen/nav_drawer_activity_main_text_button_text_size"
                android:textColor="@color/nav_drawer_activity_text_buttons_color" />

            <TextView
                android:id="@+id/text_send_error_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_drawer_activity_main_text_button_margin_top"
                android:layout_marginStart="@dimen/nav_drawer_activity_main_text_button_margin_start"
                android:drawableStart="@drawable/ic_action_send_black"
                android:drawablePadding="@dimen/nav_drawer_activity_main_text_button_padding"
                android:text="@string/nav_drawer_activity_main_send_error"
                android:textSize="@dimen/nav_drawer_activity_main_text_button_text_size"
                android:textColor="@color/nav_drawer_activity_text_buttons_color" />

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>